@@ -6,6 +6,7 @@ import com.proyecto.StoreCollection.entity.Atributo;
 import com.proyecto.StoreCollection.entity.AtributoValor;
 import com.proyecto.StoreCollection.repository.AtributoRepository;
 import com.proyecto.StoreCollection.repository.AtributoValorRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -13,71 +14,80 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
+@RequiredArgsConstructor
 public class AtributoValorServiceImpl implements AtributoValorService {
 
-    @Autowired
-    private AtributoValorRepository repository;
+    private final AtributoValorRepository valorRepository;
+    private final AtributoRepository atributoRepository;
+    private final TiendaService tiendaService;
 
-    @Autowired
-    private AtributoRepository atributoRepository;
-
+    // === IMPLEMENTACIÓN FALTANTE (OBLIGATORIA) ===
     @Override
     @Transactional(readOnly = true)
     public Page<AtributoValorResponse> findAll(Pageable pageable) {
-        return repository.findAll(pageable)
-                .map(this::toResponse);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public AtributoValorResponse findById(Long id) {
-        AtributoValor valor = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Valor no encontrado: " + id));
-        return toResponse(valor);
-    }
-    @Override
-    public AtributoValorResponse save(AtributoValorRequest request) { return save(request, null); }
-
-    @Override
-    public AtributoValorResponse save(AtributoValorRequest request, Long id) {
-        AtributoValor valor = id == null ? new AtributoValor() : repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Valor no encontrado: " + id));
-
-        valor.setValor(request.getValor());
-        Atributo atributo = atributoRepository.findById(request.getAtributoId())
-                .orElseThrow(() -> new RuntimeException("Atributo no encontrado: " + request.getAtributoId()));
-        valor.setAtributo(atributo);
-
-        valor = repository.save(valor);
-        return toResponse(valor);
-    }
-
-    @Override
-    public void deleteById(Long id) {
-        if (!repository.existsById(id)) {
-            throw new RuntimeException("Valor no encontrado: " + id);
-        }
-        repository.deleteById(id);
+        return valorRepository.findAll(pageable).map(this::toResponse);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<AtributoValorResponse> findByAtributoId(Long atributoId) {
-        return repository.findByAtributoId(atributoId)
-                .stream()
+        atributoRepository.getByIdAndTenant(atributoId); // seguridad
+        return valorRepository.findByAtributoIdSafe(atributoId).stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<AtributoValorResponse> findByAtributoIdAndTiendaSlug(
+            Long atributoId, String tiendaSlug) {
+
+        // TenantFilter ya garantiza que solo ve valores de esa tienda
+        return valorRepository.findAllByTenant().stream()
+                .filter(v -> v.getAtributo().getId().equals(atributoId))
+                .map(this::toResponse)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public AtributoValorResponse findById(Long id) {
+        return toResponse(valorRepository.getByIdAndTenant(id));
+    }
+
+    @Override
+    public AtributoValorResponse save(AtributoValorRequest request) {
+        return save(request, null);
+    }
+
+    @Override
+    public AtributoValorResponse save(AtributoValorRequest request, Long id) {
+        AtributoValor valor = id == null
+                ? new AtributoValor()
+                : valorRepository.getByIdAndTenant(id);
+
+        valor.setValor(request.getValor());
+
+        Atributo atributo = atributoRepository.getByIdAndTenant(request.getAtributoId());
+        valor.setAtributo(atributo);
+
+        return toResponse(valorRepository.save(valor));
+    }
+
+    @Override
+    public void deleteById(Long id) {
+        valorRepository.delete(valorRepository.getByIdAndTenant(id));
     }
 
     private AtributoValorResponse toResponse(AtributoValor v) {
-        AtributoValorResponse dto = new AtributoValorResponse();
-        dto.setId(v.getId());
-        dto.setValor(v.getValor());
-        dto.setAtributoId(v.getAtributo().getId());
-        return dto;
+        return new AtributoValorResponse(
+                v.getId(),
+                v.getValor(),
+                v.getAtributo().getId(),
+                v.getAtributo().getNombre()
+        );
     }
 }
